--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiobotocore==2.0.1
+﻿aiobotocore
 aiodns==3.0.0
 aiohttp==3.7.4.post0
 aiohttp-socks==0.6.0
@@ -17,8 +17,8 @@ beautifulsoup4==4.9.3
 bleach==4.0.0
 blinker==1.4
 blis==0.7.5
-boto3==1.20.18
-botocore==1.22.8
+boto3
+botocore
 bs4==0.0.1
 cachetools==4.2.4
 catalogue==2.0.6
@@ -132,6 +132,10 @@ schedule==1.1.0
 scikit-learn==1.0.1
 scipy==1.7.2
 Send2Trash==1.8.0
+six==1.16.0
+sklearn==0.0
+smart-open==5.2.1
+smmap==5.0.0
 soupsieve==2.2.1
 spacy==3.2.0
 spacy-legacy==3.0.8
