--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ geopy==2.2.0
 gitdb==4.0.9
 GitPython==3.1.24
 googletransx==2.4.2
-graphviz==0.19
+graphviz>=0.8.1
 idna==2.6
 iniconfig==1.1.1
 ipykernel==6.5.1
