--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,7 @@ nbformat==5.1.3
 nest-asyncio==1.5.1
 nltk==3.6.5
 notebook==6.4.3
-numpy>=1.17.0
+numpy==1.17.0
 opencv-python==4.5.4.60
 openpyxl==3.0.7
 packaging==21.0
