--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-﻿aiobotocore
+numpy
+aiobotocore
 aiodns==3.0.0
 aiohttp==3.7.4.post0
 aiohttp-socks==0.6.0
@@ -86,7 +87,6 @@ nbformat==5.1.3
 nest-asyncio==1.5.1
 nltk==3.6.5
 notebook==6.4.3
-numpy>=1.17.0
 opencv-python==4.5.4.60
 openpyxl==3.0.7
 packaging==21.0
