--- a/requirements.txt
+++ b/requirements.txt
@@ -160,7 +160,7 @@ typer==0.4.0
 typing-extensions==3.10.0.2
 tzdata==2021.5
 tzlocal==4.1
-urllib3
+urllib3>=1.25.4
 validators==0.18.2
 virtualenv==20.4.7
 virtualenv-clone==0.5.4
